--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "babel-loader": "^9.0.0",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
