--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "scripts": {
-    "start": "webpack serve --config webpack/webpack.config.js --open"
-  },
   "name": "webpack-typescript-test",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
+    "build": "webpack --config webpack/webpack.config.js --env env=prod"
+  },
   "author": "Yaroslav Yakupov <yakupov.yaroslav@icloud.com>",
   "license": "MIT",
   "dependencies": {
@@ -17,15 +18,18 @@
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "babel-loader": "^9.0.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "react-refresh": "^0.14.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   }
 }
